--- a/backend/package.json
+++ b/backend/package.json
@@ -9,25 +9,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "aws-sdk": "^2.1440.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.4",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "aws-sdk": "^2.1440.0",
-    "uuid": "^9.0.0",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "sharp": "^0.32.5",
+    "socket.io": "^4.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "eslint": "^8.48.0",
     "jest": "^29.6.4",
-    "supertest": "^6.3.3",
-    "eslint": "^8.48.0"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
